# magnifique

./: LICENSE  magnifique.cabal
exe/: magnifique.hs
exe/Magnifique/App/: Aeson.hs  Common.hs
src/: Magnifique.hs
src/Magnifique/: Aeson.hs  App.hs  Internal.hs  Typeable.hs
src/Magnifique/Aeson/: App.hs  Internal.hs
src/Magnifique/App/: Common.hs
test/: fibtree.hs
