name:                magnifique
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lysxia/magnifique#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Magnifique
    Magnifique.Internal
  build-depends:
    pretty-simple,
    text,
    base >= 4.9 && < 5
  ghc-options: -Wall -Wno-name-shadowing
  default-language:    Haskell2010

executable magnifique
  hs-source-dirs:      exe
  main-is:             magnifique.hs
  build-depends:
    base,
    brick,
    vty,
    magnifique
  ghc-options:         -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/magnifique
